--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -19,6 +20,8 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
+    "prisma": "^4.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
